hphp/test/zend/good/ext/standard/tests/file/bug24482.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!function_exists("glob")) {
    die('skip glob() not available');
}
}
